Fixed issues mentioned in Daniel's peer review

--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Authours:\n",
+    "Alex Khadra (alexkhadr), Damien Fung (YellowPrawn), Ryan Lazenby (rlzae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary:\n",
     "Our group aims to analyze and determine the correlation between the number of years an individual spends in school compared to how long they spend working every week. We download and clean the data, then perform a linear regression analysis to find the relationship that holds between the two."
    ]
@@ -22,7 +30,9 @@
     "## Introduction:\n",
     "Education is often seen as a gateway to greater understanding of the world; it is also seen as a way to gain freedom from having to work low paying jobs to pay living expenses. We aim to determine the extent of this view and track how these expectations work in reality. We also use our results to predict the number of hours worked with different kinds of higher education degrees.\n",
     "\n",
-    "For this project, we use the \"Census Income\" dataset from the UC Irvine Machine Learning Repository, representing data from the 1994 US Census. For more details, see the original source here: https://archive-beta.ics.uci.edu/ml/datasets/adult"
+    "For this project, we use the \"Census Income\" dataset from the UC Irvine Machine Learning Repository, representing data from the 1994 US Census. For more details, see the original source here: https://archive-beta.ics.uci.edu/ml/datasets/adult\n",
+    "\n",
+    "In this report, we aim to answer the question: Does there exist a correlation between the number of years an indivudal spends in formal education and the amount of hours spent working weekly"
    ]
   },
   {
@@ -781,13 +791,15 @@
    "source": [
     "## Discussion:\n",
     "\n",
-    "Looking at {numref}`ed_hours_plot`, we can that there is a positive correlation between education level and hours worked. Someone with minimal education would likely not have a full time job (i.e preschool has an estimate of {glue:text}`preschool` hours worked, and people with bachelors or doctorates tend to work slightly more ({glue:text}`bachelors` and {glue:text}`doctorates` hours worked respectively) (This could be due to most working exactly 40, and some working many more). Following the trend to a higher number like 20, a rough equivalent of 3 PhDs, brings us to an estimate of {glue:text}`3_doctorates` hours worked a week.\n",
+    "Looking at {numref}`ed_hours_plot` and Americans ({numref}`usa_plot`), we can that there is a positive correlation between education level and hours worked. Someone with minimal education would likely not have a full time job (i.e preschool has an estimate of {glue:text}`preschool` hours worked, and people with bachelors or doctorates tend to work slightly more ({glue:text}`bachelors` and {glue:text}`doctorates` hours worked respectively) (This could be due to most working exactly 40, and some working many more). Following the trend to a higher number like 20, a rough equivalent of 3 PhDs, brings us to an estimate of {glue:text}`3_doctorates` hours worked a week.\n",
     "\n",
     "There are many possible explanations as to why this exists. One possibility is that this is caused by students still in school, who have low education levels and would only work part time. Another is that jobs with lower education requirements do not allow for advancement to full time work, or that jobs with higher requirements are more demanding. \n",
     "\n",
     "However we can also see that our predictive model is misleading as the model predicts that pre-school kids work {glue:text}`preschool` hours per week. We know that this is incorrect. This does not mean that people in pre-school work {glue:text}`preschool` hours a week but that people that only completed pre-school and nothing else sometime in the past now work that many hours. \n",
     "\n",
-    "Looking at the graphs for Canadians ({numref}`canada_plot`) and Americans ({numref}`usa_plot`) only, we can see that there actually is a negative correlation between hours worked and education level. This can be because at higher education levels you may still be spending a lot of time studying rather than learning hence your hours stay the same. The working hours for education level are almost consistent at 40hrs which is the standard full time job in Canada and USA hence it makes sense that it is consistent with all education levels as it just means everyone is working standard full time hours.\n",
+    "Looking at the graph for Canadians ({numref}`canada_plot`) only, we can see that there actually is a negative correlation between hours worked and education level. This can be because at higher education levels you may still be spending a lot of time studying rather than learning hence your hours stay the same. The working hours for education level are almost consistent at 40hrs which is the standard full time job in the United States of America hence it makes sense that it is consistent with all education levels as it just means everyone is working standard full time hours.\n",
+    "\n",
+    "It is also important to note that the original dataset only has data from the United States of America; the difference in correlation between the entire sample, Americans, and Canadians could possibly be attributed to an unknown confounding variable or a result of chance. Furter statistical analysis through hypothesis testing would be needed to verify such a claim.\n",
     "\n",
     "Analyzing other variables in this data-set such as age could offer hints as to which explanation is correct. To be certain and to distinguish if this is truly causation or just correlation would likely require gathering more detailed data from other sources."
    ]
