--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -61,6 +61,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We use the pandas library for storing and processing data, the numpy data for more detailed analytical functions, and the matplotlib library to plot our findings. We inlude several functions we created in the Python folder."
    ]
@@ -78,10 +83,9 @@
     "from myst_nb import glue\n",
     "import sys\n",
     "import pandas as pd\n",
-    "sys.path.append(\"..\")\n",
-    "from src.regression import regression\n",
-    "from src.filter import filter as fil\n",
-    "from src.remove_column import remove_column"
+    "from group3package.regression import regression\n",
+    "from group3package.filter import filter as fil\n",
+    "from group3package.remove_column import remove_column as rc"
    ]
   },
   {
@@ -845,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
