Added small changes to methods

--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Methods & Results:"
+    "## Methods"
    ]
   },
   {
@@ -285,6 +285,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To be able to find the correlation, we use a linear regression. Our linear regression takes level of education and hours worked in a week as its arguments and finds the correlation.\n",
+    "\n",
     "The education-num data is not the years spent in formal education, but an ordinal representation of the education category. Matching the values by counting the number of occurrences in the data, we can find the intended pairs:"
    ]
   },
@@ -789,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discussion:\n",
+    "## Results & Discussion:\n",
     "\n",
     "Looking at {numref}`ed_hours_plot` and Americans ({numref}`usa_plot`), we can that there is a positive correlation between education level and hours worked. Someone with minimal education would likely not have a full time job (i.e preschool has an estimate of {glue:text}`preschool` hours worked, and people with bachelors or doctorates tend to work slightly more ({glue:text}`bachelors` and {glue:text}`doctorates` hours worked respectively) (This could be due to most working exactly 40, and some working many more). Following the trend to a higher number like 20, a rough equivalent of 3 PhDs, brings us to an estimate of {glue:text}`3_doctorates` hours worked a week.\n",
     "\n",
@@ -845,7 +847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
