--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Methods & Results:"
+    "## Methods:"
    ]
   },
   {
@@ -289,6 +289,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We use linear regression to in our analysis. The linear regression takes education-number and hours worked per week as its arguments and finds a correlation.\n",
+    "\n",
     "The education-num data is not the years spent in formal education, but an ordinal representation of the education category. Matching the values by counting the number of occurrences in the data, we can find the intended pairs:"
    ]
   },
@@ -793,8 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discussion:\n",
-    "\n",
+    "## Results & Discussion:\n",
     "Looking at {numref}`ed_hours_plot` and Americans ({numref}`usa_plot`), we can that there is a positive correlation between education level and hours worked. Someone with minimal education would likely not have a full time job (i.e preschool has an estimate of {glue:text}`preschool` hours worked, and people with bachelors or doctorates tend to work slightly more ({glue:text}`bachelors` and {glue:text}`doctorates` hours worked respectively) (This could be due to most working exactly 40, and some working many more). Following the trend to a higher number like 20, a rough equivalent of 3 PhDs, brings us to an estimate of {glue:text}`3_doctorates` hours worked a week.\n",
     "\n",
     "There are many possible explanations as to why this exists. One possibility is that this is caused by students still in school, who have low education levels and would only work part time. Another is that jobs with lower education requirements do not allow for advancement to full time work, or that jobs with higher requirements are more demanding. \n",
@@ -849,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
