Changed to analyze

--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use linear regression to in our analysis. The linear regression takes education-number and hours worked per week as its arguments and finds a correlation.\n",
+    "We use linear regression to in our analysis. The linear regression takes education-num and hours-per-week (hours worked per week) as its arguments and finds a correlation. We than perform the same regression but filtering for different native-countries.\n",
     "\n",
     "The education-num data is not the years spent in formal education, but an ordinal representation of the education category. Matching the values by counting the number of occurrences in the data, we can find the intended pairs:"
    ]
